--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,7 @@
 
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(client) app/vendor.css -->
       <!-- bower:css -->
@@ -40,13 +41,13 @@
       <!-- endinjector -->
     <!-- endbuild -->
   </head>
-  <body ng-app="chatYeoApp" id="gradient" background>
+  <body ng-app="chatYeoApp" id="gradient" background layout="column" flex>
     <!--[if lt IE 7]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div ui-view="" ></div>
+    <div ui-view="" flex layout="column"></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <script>
