--- a/client/index.html
+++ b/client/index.html
@@ -34,6 +34,7 @@
       <link rel="stylesheet" href="app/main/main.css">
       <link rel="stylesheet" href="components/canvasDrawing/canvasDrawing.css">
       <link rel="stylesheet" href="components/colorPicker/colorPicker.css">
+      <link rel="stylesheet" href="components/dashboard/dashboard.css">
       <link rel="stylesheet" href="components/footer/footer.css">
       <link rel="stylesheet" href="components/navbar/navbar.css">
       <link rel="stylesheet" href="components/oauth-buttons/oauth-buttons.css">
@@ -117,6 +118,7 @@
       <script src="components/colorPicker/colorPicker.directive.js"></script>
       <script src="components/communication/communication.service.js"></script>
       <script src="components/communication/room/room.service.js"></script>
+      <script src="components/dashboard/dashboard.directive.js"></script>
       <script src="components/eventNotify/eventNotify.service.js"></script>
       <script src="components/footer/footer.directive.js"></script>
       <script src="components/loadDrawing/ctxDraw/ctxDraw.directive.js"></script>
