--- a/client/app/chat/chat.html
+++ b/client/app/chat/chat.html
@@ -1,4 +1,4 @@
-<navbar></navbar>
+<!--<navbar></navbar>-->
 <md-content layout="row" id="chatViewPort">
 
     <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="contacts" md-is-locked-open="$mdMedia('gt-xs')" ui-view="contacts">
