--- a/client/app/chat/contacts/contacts.html
+++ b/client/app/chat/contacts/contacts.html
@@ -1,5 +1,5 @@
 
-<md-toolbar md-whiteframe="2" class="md-accent" layout="row" layout-align="center center" >
+<md-toolbar md-whiteframe="2" layout="row" layout-align="center center" >
   <span layout-margin="3px"></span>
   <span flex>Friend List</span>
   <ng-md-icon icon="flag" aria-label="Add User"   ng-class="{'md-primary':CCtrl.requests.length==0,'md-alert':CCtrl.requests.length>0}">
@@ -21,7 +21,7 @@
   </md-list-item>
 </md-list>
 
-<md-toolbar md-whiteframe="2" class="md-accent" layout="row" layout-align="center center" >
+<md-toolbar md-whiteframe="2" layout="row" layout-align="center center" >
   <span layout-margin="3px"></span>
   <span flex>Group List</span>
 <!--<h4 class="title-bar">Group List-->
