--- a/client/app/chat/information/information.html
+++ b/client/app/chat/information/information.html
@@ -1,4 +1,4 @@
-<md-toolbar class="md-accent" layout="row" layout-align="center center" ng-hide="ICtrl.selection.name">User Information</md-toolbar>
+<md-toolbar  layout="row" layout-align="center center" ng-hide="ICtrl.selection.name">User Information</md-toolbar>
 <md-content  class="reset  information" ng-if="ICtrl.selection" >
   <h4 class="title-bar" ng-show="ICtrl.selection.name">{{ICtrl.selection.name}}</h4>
   <image  ng-src="{{ICtrl.selection.img }}"  class="user-photo"></image>
